--- a/counter.html
+++ b/counter.html
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div class="app" id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/counter.ts"></script>
   </body>
 </html>
